# Network Diagram - Mermaid Source

This file contains the Mermaid source code for generating network diagrams.

## HomeNet Network Architecture

```mermaid
graph TB
    subgraph INTERNET["🌐 INTERNET"]
        WAN[Wide Area Network]
    end

    subgraph MODEM["📡 MODEM/ROUTER"]
        GATEWAY[Gateway<br/>192.168.1.1]
    end

    subgraph RASPBERRY["🍓 RASPBERRY PI 3 - HomeNet"]
        subgraph APP["📱 HomeNet Application"]
            WEB[Web Interface<br/>Port 5000]

            subgraph MONITORING["📊 Monitoring"]
                DASH[Dashboard]
                HOSTS[Hosts View]
                TRAFFIC[Traffic View]
            end

            subgraph CONTROL["🛡️ Control"]
                RULES[Rules Engine]
                SCHEDULE[Schedule Manager]
                BLOCK[iptables Controller]
            end

            subgraph ALERTS["🔔 Alerts"]
                NEWHOST[New Host Alert]
                HIGHTRAF[High Traffic Alert]
                EMAIL[Email Notifications]
            end
        end

        subgraph SYSTEM["⚙️ System Layer"]
            IPTABLES[iptables Firewall]
            ARP[ARP Scanner]
            PSUTIL[psutil Monitor]
        end

        subgraph DATA["💾 Data Layer"]
            DB[(SQLite DB)]
            CONFIG[(config.json)]
        end
    end

    subgraph LAN["🏠 Local Network"]
        subgraph KIDS["👶 Kids' Devices"]
            PHONE1[📱 Phone]
            TABLET[💻 Tablet]
            LAPTOP1[🖥️ Laptop]
        end

        subgraph PARENTS["👨‍👩‍👧 Parents' Devices"]
            LAPTOP2[💻 Laptop]
            PHONE2[📱 Phone]
        end

        subgraph GAMING["🎮 Gaming"]
            PS5[🎮 PlayStation]
            XBOX[🎮 Xbox]
        end

        subgraph SMARTHOME["🏠 Smart Home"]
            TV[📺 Smart TV]
            SPEAKER[🔊 Smart Speaker]
        end
    end

    subgraph SWITCH["🔌 Network Switch"]
    end

    %% Internet Connection
    WAN --> GATEWAY
    GATEWAY --> ETH0{eth0}
    ETH0 --> PI

    %% Application Flow
    WEB --> DASH
    WEB --> HOSTS
    WEB --> TRAFFIC
    WEB --> RULES
    RULES --> SCHEDULE
    RULES --> BLOCK
    BLOCK --> IPTABLES
    IPTABLES --> DROP[DROP/ACCEPT]

    %% Monitoring Flow
    ARP --> HOSTS
    PSUTIL --> TRAFFIC
    HOSTS --> DB
    TRAFFIC --> DB
    RULES --> DB
    SCHEDULE --> DB

    %% Alerts
    ARP --> NEWHOST
    TRAFFIC --> HIGHTRAF
    NEWHOST --> EMAIL
    HIGHTRAF --> EMAIL

    %% Network Connections
    PI[eth0: 192.168.1.x] --> SWITCH
    PI[eth1: 192.168.2.1] --> SWITCH

    SWITCH --> KIDS
    SWITCH --> PARENTS
    SWITCH --> GAMING
    SWITCH --> SMARTHOME

    %% Blocking Indicators
    style PHONE1 fill:#ffcccc
    style TABLET fill:#ffcccc
    style LAPTOP1 fill:#ffcccc
    style PS5 fill:#ffcccc
    style XBOX fill:#ffcccc

    style PHONE2 fill:#ccffcc
    style LAPTOP2 fill:#ccffcc
    style TV fill:#ccffcc
    style SPEAKER fill:#ccffcc

    %% Legend
    subgraph LEGEND["📋 Legend"]
        BLOCKED[🔴 BLOCKED]
        ALLOWED[🟢 ALLOWED]
    end
```

## Traffic Flow

```mermaid
sequenceDiagram
    participant Device as 🏠 Device
    participant Pi as 🍓 Raspberry Pi
    participant IPT as iptables
    participant DB as 💾 Database
    participant Alert as 🔔 Alert System

    Device->>Pi: HTTP/HTTPS Request
    Pi->>IPT: Route to HOMENET chain

    alt Schedule Active (11PM-12AM)
        IPT->>IPT: Check Schedule
        IPT->>IPT: Check MAC Filter
        IPT->>IPT: Check Domain Rules
        IPT->>IPT: Check App Rules
    end

    alt Block Matched
        IPT->>DB: Log Blocked Request
        IPT->>Device: DROP Packet
        DB->>Alert: Trigger Alert
        Alert->>Alert: Generate Notification
    else Allow
        IPT->>Device: ACCEPT Packet
        IPT->>DB: Log Traffic Stats
    end

    Note over Pi,IPT: Real-time traffic monitoring<br/>using psutil + periodic ARP scans
```

## Database Schema

```mermaid
erDiagram
    USERS ||--o{ HOSTS : "manages"
    USERS ||--o{ RULES : "creates"
    USERS ||--o{ SCHEDULES : "configures"

    HOSTS ||--o{ TRAFFIC_LOGS : "generates"
    HOSTS ||--o{ ALERTS : "triggers"

    RULES ||--o{ RULES : "category"

    USERS {
        int id PK
        string username
        string password_hash
        string email
        string role
        timestamp created_at
        timestamp last_login
    }

    HOSTS {
        int id PK
        string mac_address UK
        string ip_address
        string hostname
        string device_type
        string os_type
        string mac_vendor
        bool blocked
        bool trusted
        timestamp first_seen
        timestamp last_seen
        string notes
    }

    RULES {
        int id PK
        string name
        string type
        string category
        string pattern
        string action
        bool enabled
        timestamp created_at
    }

    SCHEDULES {
        int id PK
        string name
        string start_time
        string end_time
        string days
        bool enabled
        bool block_all
        timestamp created_at
    }

    TRAFFIC_LOGS {
        int id PK
        int host_id FK
        timestamp timestamp
        int bytes_sent
        int bytes_received
        int packets_sent
        int packets_received
    }

    ALERTS {
        int id PK
        string type
        string severity
        string title
        string message
        int host_id FK
        bool acknowledged
        timestamp timestamp
    }

    SETTINGS {
        string key PK
        string value
    }
```

## Blocking Schedule Timeline

```mermaid
gantt
    title HomeNet Blocking Schedule
    dateFormat HH
    axisFormat %H:00

    section Blocking
    Night Block (11PM-12AM)    :active, block1, 23:00, 01:00
    Homework Time               :work1, 15:00, 18:00

    section Exceptions
    Trusted Devices (Parents)   :trusted, 00:00, 24:00
    Emergency Override          :override, after block1, 01:00
```

## Component Architecture

```mermaid
graph TB
    subgraph GUI["🎨 GUI Layer (CustomTkinter)"]
        LOGIN[Login Window]
        DASH[Dashboard View]
        HOSTS[Hosts View]
        TRAFFIC[Traffic View]
        RULES[Rules View]
        ALERTS[Alerts View]
        SETTINGS[Settings View]
    end

    subgraph CORE["⚙️ Core Engine"]
        SCANNER[Network Scanner]
        MONITOR[Traffic Monitor]
        BLOCKER[Traffic Blocker]
        ALERTS[Alert Manager]
        SPEEDTEST[Speed Test]
    end

    subgraph DATA["💾 Data Layer"]
        DB[(SQLite)]
        CONFIG[(config.json)]
    end

    subgraph SYSTEM["🔧 System APIs"]
        IPTABLES[iptables]
        PSUTIL[psutil]
        SCAPY[scapy]
        SOCKET[socket]
    end

    LOGIN --> |Auth| CORE
    DASH --> CORE
    HOSTS --> SCANNER
    TRAFFIC --> MONITOR
    RULES --> BLOCKER
    ALERTS --> ALERTS

    SCANNER --> IPTABLES
    SCANNER --> PSUTIL
    SCANNER --> SCAPY
    MONITOR --> PSUTIL
    BLOCKER --> IPTABLES
    SPEEDTEST --> SOCKET

    SCANNER --> DB
    MONITOR --> DB
    BLOCKER --> DB
    ALERTS --> DB
    DB --> CONFIG
```
